# RAG42

./: .gitignore  Makefile  README.md  TODO.txt  download.py  files_loader.py  index_manager.py  indexation.py  main.py  pyproject.toml  python_code_chunker.py  read_all_file.py  search.py  test.py  text_chunker.py
data/output/: cache.json
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results/UnansweredQuestions/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/: dataset_code_public.json  dataset_docs_public.json
data/output/search_results_and_answer/UnansweredQuestion/: dataset_docs_public.json
data/output/search_results_hybrid/: dataset_docs_public.json
data/processed/: chunks.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __main__.py  chunker.py  cli.py  data_models.py  index_manager.py  qwen.py  semantic_embeddings.py
src/student/: __main__.py  chunker.py  cli.py  data_models.py  files_loader.py  index_manager.py  indexation.py  qwen.py  search_files.py  semantic_embeddings.py
test_file/: test.py  test.txt
