[project]
name = "student"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "dspy>=3.2.1",
    "fire>=0.7.1",
    "langchain>=1.3.9",
    "torch>=2.12.1",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
