[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bm25s>=0.3.9",
    "fire>=0.7.1",
    "huggingface-hub>=1.19.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
